# kaldi-decoder

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: build-pip.yml  build-wheels-aarch64.yaml  build-wheels-linux.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels-win64.yaml  linux.yaml  macos.yaml  windows.yaml
cmake/: cmake_extension.py  eigen.cmake  kaldifst.cmake  openfst.cmake  pybind11.cmake
kaldi-decoder/: CMakeLists.txt
kaldi-decoder/csrc/: CMakeLists.txt  decodable-ctc.cc  decodable-ctc.h  decodable-itf.h  eigen-test.cc  eigen.cc  eigen.h  faster-decoder.cc  faster-decoder.h  hash-list-inl.h  hash-list-test.cc  hash-list.h  kaldi-math.cc  kaldi-math.h  lattice-faster-decoder.cc  lattice-faster-decoder.h  lattice-simple-decoder.cc  lattice-simple-decoder.h  log.h  simple-decoder.cc  simple-decoder.h  stl-utils.h
kaldi-decoder/python/csrc/: CMakeLists.txt  decodable-ctc.cc  decodable-ctc.h  decodable-itf.cc  decodable-itf.h  faster-decoder.cc  faster-decoder.h  kaldi-decoder.cc  kaldi-decoder.h  lattice-simple-decoder.cc  lattice-simple-decoder.h  simple-decoder.cc  simple-decoder.h
kaldi-decoder/python/kaldi_decoder/: __init__.py
scripts/: check_style_cpplint.sh
